--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,13 @@
   "ignore": [],
   "dependencies": {
     "paper-styles": "PolymerElements/paper-styles#1 - 2",
-    "polymer": "Polymer/polymer#1.9 - 2"
+    "polymer": "Polymer/polymer#1.9 - 2",
+    "iron-form": "^2.0.1",
+    "paper-input": "^2.0.2",
+    "paper-button": "^2.0.0",
+    "paper-dropdown-menu": "^2.0.0",
+    "paper-menu": "^1.3.0",
+    "paper-item": "^2.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
@@ -35,7 +41,7 @@
       "dependencies": {
         "polymer": "Polymer/polymer#^1.9",
         "paper-styles": "PolymerElements/paper-styles#^1.0.0"
-     },
+      },
       "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
         "paper-styles": "PolymerElements/paper-styles#^1.0.0",
