--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,9 @@
     "paper-button": "^2.0.0",
     "paper-dropdown-menu": "^2.0.0",
     "paper-menu": "^1.3.0",
-    "paper-item": "^2.0.0"
+    "paper-item": "^2.0.0",
+    "paper-listbox": "^2.0.0",
+    "paper-checkbox": "^2.0.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
