--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
         "paper-item": "PolymerElements/paper-item#1 - 2",
         "paper-listbox": "PolymerElements/paper-listbox#1 - 2",
         "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
-        "vaadin-date-picker": "^2.0.5",
+        "vaadin-material-theme": "vaadin/vaadin-material-theme#^0.3.0",
+        "vaadin-date-picker": "vaadin/vaadin-date-picker#^2.0.5",
         "iron-form": "PolymerElements/iron-form#1 - 2"
     },
     "devDependencies": {
@@ -49,7 +50,8 @@
                 "paper-item": "PolymerElements/paper-item#^1.0.0",
                 "paper-listbox": "PolymerElements/paper-listbox#^1.0.0",
                 "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.1",
-                "vaadin-date-picker": "^1.0.5",
+                "vaadin-material-theme": "vaadin/vaadin-material-theme#0.2.5",
+                "vaadin-date-picker": "vaadin/vaadin-date-picker#^1.0.5",
                 "iron-form": "PolymerElements/iron-form#^1.0.1"
             },
             "devDependencies": {
