--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,7 @@
     "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
     "vaadin-date-picker": "vaadin/vaadin-date-picker#^2.0.5",
     "iron-form": "PolymerElements/iron-form#1 - 2",
-    "firebase": "4.5.0",
+    "firebase": "firebase/firebase#^4.5.0",
     "polymerfire": "firebase/polymerfire#^2.2.1"
   },
   "devDependencies": {
@@ -52,7 +52,9 @@
         "paper-listbox": "PolymerElements/paper-listbox#^1.0.0",
         "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.1",
         "vaadin-date-picker": "vaadin/vaadin-date-picker#^1.0.5",
-        "iron-form": "PolymerElements/iron-form#^1.0.1"
+        "iron-form": "PolymerElements/iron-form#^1.0.1",
+        "firebase": "firebase/firebase#^4.5.0",
+        "polymerfire": "firebase/polymerfire#^2.2.1"
       },
       "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
