--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
     "vaadin-date-picker": "vaadin/vaadin-date-picker#^2.0.5",
     "iron-form": "PolymerElements/iron-form#1 - 2",
+    "paper-radio-group": "PolymerElements/paper-radio-group#1 - 2",
     "polymerfire": "firebase/polymerfire#^2.2.1"
   },
   "devDependencies": {
@@ -52,7 +53,8 @@
         "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.1",
         "vaadin-date-picker": "vaadin/vaadin-date-picker#^1.0.5",
         "iron-form": "PolymerElements/iron-form#^1.0.1",
-        "polymerfire": "firebase/polymerfire#^0.10.3"
+        "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.0",
+        "polymerfire": "firebase/polymerfire#^0.11.0"
       },
       "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
