--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "vaadin-date-picker": "vaadin/vaadin-date-picker#^2.0.6",
     "iron-form": "PolymerElements/iron-form#1 - 2",
     "paper-radio-group": "PolymerElements/paper-radio-group#1 - 2",
-    "polymerfire": "firebase/polymerfire#^2.2.1"
+    "polymerfire": "firebase/polymerfire#^2.2.1",
+    "moment-element": "abdonrd/moment-element#^3.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
@@ -54,7 +55,8 @@
         "vaadin-date-picker": "vaadin/vaadin-date-picker#^1.2.4",
         "iron-form": "PolymerElements/iron-form#^1.0.1",
         "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.0",
-        "polymerfire": "firebase/polymerfire#^0.11.0"
+        "polymerfire": "firebase/polymerfire#^0.11.0",
+        "moment-element": "abdonrd/moment-element#^1.0.0"
       },
       "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
