--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "iron-form": "PolymerElements/iron-form#1 - 2",
     "paper-radio-group": "PolymerElements/paper-radio-group#1 - 2",
     "polymerfire": "firebase/polymerfire#^2.2.1",
-    "moment-element": "abdonrd/moment-element#^3.0.0"
+    "moment-element": "abdonrd/moment-element#^3.0.0",
+    "vaadin-grid": "vaadin/vaadin-grid#^3.0.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
@@ -56,7 +57,8 @@
         "iron-form": "PolymerElements/iron-form#^1.0.1",
         "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.0",
         "polymerfire": "firebase/polymerfire#^0.11.0",
-        "moment-element": "abdonrd/moment-element#^1.0.0"
+        "moment-element": "abdonrd/moment-element#^1.0.0",
+        "vaadin-grid": "vaadin/vaadin-grid#^2.0.2"
       },
       "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
