--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/ProPlanr/proplanr-repeat",
   "ignore": [],
   "dependencies": {
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#1 - 2",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.1.0",
     "paper-styles": "PolymerElements/paper-styles#1 - 2",
     "polymer": "Polymer/polymer#1.9 - 2",
     "paper-input": "PolymerElements/paper-input#1 - 2",
@@ -45,8 +45,8 @@
   "variants": {
     "1.x": {
       "dependencies": {
-        "polymer": "Polymer/polymer#^1.9",
         "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
+        "polymer": "Polymer/polymer#^1.9",
         "paper-styles": "PolymerElements/paper-styles#^1.0.0",
         "paper-input": "PolymerElements/paper-input#^1.0.2",
         "paper-button": "PolymerElements/paper-button#^1.0.0",
