--- a/bower.json
+++ b/bower.json
@@ -21,20 +21,22 @@
   "homepage": "https://github.com/ProPlanr/proplanr-repeat",
   "ignore": [],
   "dependencies": {
+    "iron-form": "PolymerElements/iron-form#1 - 2",
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.1.0",
-    "paper-styles": "PolymerElements/paper-styles#1 - 2",
-    "polymer": "Polymer/polymer#1.9 - 2",
-    "paper-input": "PolymerElements/paper-input#1 - 2",
+    "iron-meta": "PolymerElements/iron-meta#^2.0.3",
+    "moment-element": "abdonrd/moment-element#^3.0.0",
     "paper-button": "PolymerElements/paper-button#1 - 2",
+    "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#1 - 2",
+    "paper-icon-button": "PolymerElements/paper-icon-button#1 - 2",
+    "paper-input": "PolymerElements/paper-input#1 - 2",
     "paper-item": "PolymerElements/paper-item#1 - 2",
     "paper-listbox": "PolymerElements/paper-listbox#1 - 2",
-    "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
-    "vaadin-date-picker": "vaadin/vaadin-date-picker#^2.0.6",
-    "iron-form": "PolymerElements/iron-form#1 - 2",
     "paper-radio-group": "PolymerElements/paper-radio-group#1 - 2",
+    "paper-styles": "PolymerElements/paper-styles#1 - 2",
+    "polymer": "Polymer/polymer#1.9 - 2",
     "polymerfire": "firebase/polymerfire#^2.2.1",
-    "moment-element": "abdonrd/moment-element#^3.0.0",
+    "vaadin-date-picker": "vaadin/vaadin-date-picker#^2.0.6",
     "vaadin-grid": "vaadin/vaadin-grid#^3.0.2"
   },
   "devDependencies": {
@@ -45,20 +47,22 @@
   "variants": {
     "1.x": {
       "dependencies": {
+        "iron-form": "PolymerElements/iron-form#^1.0.1",
         "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
-        "polymer": "Polymer/polymer#^1.9",
-        "paper-styles": "PolymerElements/paper-styles#^1.0.0",
-        "paper-input": "PolymerElements/paper-input#^1.0.2",
+        "iron-meta": "PolymerElements/iron-meta#^1.0.0",
+        "moment-element": "abdonrd/moment-element#^1.0.0",
         "paper-button": "PolymerElements/paper-button#^1.0.0",
+        "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.1",
         "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.0.0",
+        "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0 ",
+        "paper-input": "PolymerElements/paper-input#^1.0.2",
         "paper-item": "PolymerElements/paper-item#^1.0.0",
         "paper-listbox": "PolymerElements/paper-listbox#^1.0.0",
-        "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.1",
-        "vaadin-date-picker": "vaadin/vaadin-date-picker#^1.2.4",
-        "iron-form": "PolymerElements/iron-form#^1.0.1",
         "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.0",
+        "paper-styles": "PolymerElements/paper-styles#^1.0.0",
+        "polymer": "Polymer/polymer#^1.9",
         "polymerfire": "firebase/polymerfire#^0.11.0",
-        "moment-element": "abdonrd/moment-element#^1.0.0",
+        "vaadin-date-picker": "vaadin/vaadin-date-picker#^1.2.4",
         "vaadin-grid": "vaadin/vaadin-grid#^2.0.0"
       },
       "devDependencies": {
