--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "moment-element": "abdonrd/moment-element#^3.0.0",
     "paper-button": "PolymerElements/paper-button#1 - 2",
     "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
+    "paper-dialog": "PolymerElements/paper-dialog#1 - 2",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#1 - 2",
     "paper-icon-button": "PolymerElements/paper-icon-button#1 - 2",
     "paper-input": "PolymerElements/paper-input#1 - 2",
@@ -53,6 +54,7 @@
         "moment-element": "abdonrd/moment-element#^1.0.0",
         "paper-button": "PolymerElements/paper-button#^1.0.0",
         "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.1",
+        "paper-dialog": "PolymerElements/paper-dialog#^1.0.1",
         "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.0.0",
         "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0 ",
         "paper-input": "PolymerElements/paper-input#^1.0.2",
