--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
     "paper-dialog": "PolymerElements/paper-dialog#1 - 2",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#1 - 2",
+    "paper-fab": "PolymerElements/paper-fab#1 - 2",
     "paper-icon-button": "PolymerElements/paper-icon-button#1 - 2",
     "paper-input": "PolymerElements/paper-input#1 - 2",
     "paper-item": "PolymerElements/paper-item#1 - 2",
@@ -56,6 +57,7 @@
         "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.1",
         "paper-dialog": "PolymerElements/paper-dialog#^1.0.1",
         "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.0.0",
+        "paper-fab": "PolymerElements/paper-fab#^1.0.0",
         "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0 ",
         "paper-input": "PolymerElements/paper-input#^1.0.2",
         "paper-item": "PolymerElements/paper-item#^1.0.0",
